--- a/public/css/main.less
+++ b/public/css/main.less
@@ -7,6 +7,7 @@
 .red { background-color: red; }
 .green { background-color: green;}
 .display { display: inherit;}
+h1 { font-family: lucida;}
 ::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder { color: @placeholder-text;  }
 
 search-listings, listing-page, user-page, post-listing { 
@@ -14,7 +15,13 @@ search-listings, listing-page, user-page, post-listing {
 }
 
 post-listing {
-    .listOptions {
+    .optionsRow {
         margin-top: 10px;
+    }
+}
+
+.input-group { 
+    input, span, textarea, button { 
+        border-radius: 0 !important;
     }
 }
