can post listings and get them by id

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -10,16 +10,19 @@
 h1 { font-family: lucida;}
 ::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder { color: @placeholder-text;  }
 
-search-listings, listing-page, user-page, post-listing { 
-	display: none;
-}
-
 post-listing {
     .optionsRow {
         margin-top: 10px;
     }
 }
 
+.offer {
+    
+}
+
+listing-page {
+    background-color: grey !important
+}
 
 input, span, textarea, button { 
     border-radius: 0 !important;
