--- a/public/css/main.less
+++ b/public/css/main.less
@@ -16,8 +16,11 @@ post-listing {
     }
 }
 
-.offer {
-    
+offersArea {
+    .input-group-addon {
+        min-width:200px;
+        text-align:left;
+    }    
 }
 
 listing-page {
