working towards basic login

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -17,6 +17,8 @@ post-listing {
 }
 
 offersArea {
+    display: none;
+    
     .input-group-addon {
         min-width:200px;
         text-align:left;
