--- a/public/offers.erb
+++ b/public/offers.erb
@@ -1,11 +1,9 @@
   
-  <offersArea>
-      <div class="col-md-12">
-        <h1>Offers</h1>
-      </div>
-      
-      <div id="newOffer" class="col-md-12">
+  <offersArea>    
+      <div class="col-md-3"></div>
 
+      <div id="newOffer" class="col-md-6">
+          <h3>Make an Offer</h3>
           <form id='newOfferForm'>
                 <div class="input-group">                        
                     <span class="input-group-addon">Who are you?</span>
@@ -19,7 +17,7 @@
 
                 <div class="input-group">                        
                     <span class="input-group-addon">Details</span>
-                    <textarea name="details" class="form-control" placeholder="Convince the customer to pick you! Add your offer, details about you, your personal phone number - whatever"></textarea>
+                    <textarea name="details" class="form-control" placeholder="Convince the customer to pick you! Add your offer, details about you, your personal phone number - whatever" style="resize:none" maxlength="280"></textarea>
                 </div>
 
                 <div class="input-group">                        
@@ -30,9 +28,12 @@
                 <button type='button' class="input-group" jab-click='addOffer'>Submit</button>
           </form>
       </div>
-    
+      <div class="col-md-3"></div>
+
       <div class="col-md-12">
+          <h2>Offers</h2>
           <offers class='col-md-12'>
+              <!--nothing can go here-->              
               <div name=offersList class='offer bg-info col-md-4'>
                   <p>Name: <span name='name'></span> </p>
                   <p>Price: <span name='price'></span> </p>
