login-logout looks decent, now moving it to header

--- a/public/offers.erb
+++ b/public/offers.erb
@@ -30,7 +30,7 @@
       </div>
       <div class="col-md-3"></div>
 
-      <div class="col-md-12">
+      <div id='offersListContainer' class="col-md-12">
           <h2>Offers</h2>
           <offers class='col-md-12'>
               <!--nothing can go here-->              
