--- a/public/index.erb
+++ b/public/index.erb
@@ -1,13 +1,57 @@
-<% @listing = @listing || {} %>
+<% 
+    @listing = @listing || {} 
+    @user    = (id = session.user_id) ? $users.get(id) : nil
+    @user_email = @user && @user.email
+%>
+    <div id="navbar" class="navbar-collapse collapse">
+      <!-- <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li class="dropdown-header">Nav header</li>
+            <li><a href="#">Separated link</a></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul> -->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="../navbar/">Default</a></li>
+        <li><button id='loginBtn' onclick='signup()'>Login</button></li>
+        <li><a href="../navbar-static-top/">Static top</a></li>
+        <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+        <button type="button" id='logoutBtn' class="btn btn-small btn-info" onclick='logout()'>Logout</button>
+        
+      </ul>
+    </div>
+
+
+    <div class="col-md-12">
+        <h4 id='currentUserEmail'> <%= @user ? @user.email : nil %> </h4>
+    </div>
+    
     <div class="col-md-12">
         <div class="col-md-3"></div>
         <post-listing class="col-md-6">            
             <form id="postForm">            
                 <div class="row">
                     <input type="hidden" name="id" value='<%=@listing._id%>'>
-                    <div class="col-md-2 col-offset-5"><h1><a href="/">ClassyPie</a></h1></div>
+                    <div class="col-md-2 col-offset-5"><h1><a href="/">ClassyPie</a></h1></div>                    
                 </div>
                 
+                <!-- <div class="row">
+                    <div class="col-md-12">
+                        <button type="button" id='logoutBtn' class="btn btn-small btn-info invi" onclick='logout()'>Logout</button>
+                        <button type="button" id='loginBtn' class="btn btn-small btn-info invi" onclick='signup()'>Login</button>
+                    </div>
+                </div> -->
+
                 <div class="row">
                     <div class="col-md-12">                            
                             <div class="input-group">                        
@@ -54,7 +98,7 @@
                     <div class="col-md-12">                                                    
                             <div class="input-group">                        
                                 <span class="input-group-addon">Let me know at</span>
-                                <input type="email" name="contact" class="form-control" placeholder="you@gmail.com or @yourTwitter" value='<%=@listing.contact%>'>                     
+                                <input type="email" name="contact" class="form-control" placeholder="you@gmail.com or @yourTwitter" value='<%=@listing.contact || @user_email%>'>                     
                                     <% if !@listing._id %>
                                     <span class="input-group-btn">
                                         <button id="submitListing" class="btn btn-primary">
