--- a/public/css/main.less
+++ b/public/css/main.less
@@ -33,6 +33,12 @@ input, span, textarea, button {
     border-radius: 0 !important;
 }
 
+#navbar {
+    .nav>li>a:hover {
+        text-decoration: underline;
+        background-color: white;
+    }
+}
 .invi { 
     display: none;
 }
