--- a/public/layout.erb
+++ b/public/layout.erb
@@ -1,3 +1,8 @@
+<%
+    @user    = (id = session.user_id) ? $users.get(id) : nil
+    @user_email = @user && @user.email
+%>
+
 <!DOCTYPE html>
 <html>
 
@@ -13,6 +18,8 @@
 </head>
 
 <body>
+
+    <%= erb :navbar %>
 
     <container class="container">    
         <%= yield %>        
