--- a/public/css/main.less
+++ b/public/css/main.less
@@ -14,11 +14,13 @@ post-listing {
     .optionsRow {
         margin-top: 10px;
     }
+
+    background-color: cornsilk;
+    padding: 20px;
+    padding-top: 0;
 }
 
-offersArea {
-    display: none;
-    
+offersArea {    
     .input-group-addon {
         min-width:200px;
         text-align:left;
