--- a/public/layout.erb
+++ b/public/layout.erb
@@ -1,8 +1,3 @@
-<%
-    @user    = (id = session.user_id) ? $users.get(id) : nil
-    @user_email = @user && @user.email
-%>
-
 <!DOCTYPE html>
 <html>
 
@@ -19,7 +14,7 @@
 
 <body>
 
-    <%= erb :navbar %>
+    <%= erb :navbar, locals: locals %>
 
     <container class="container">    
         <%= yield %>        
