--- a/public/offers.erb
+++ b/public/offers.erb
@@ -1,5 +1,18 @@
+<%
+is_owner = listing.user_id == user_id
+relevant_offers = all_offers = Offers.by_listing(listing._id) || []
+if !is_owner 
+  #get only this user's offers. 
+  relevant_offers = all_offers.select {|o| (o.user_id == user_id) && user_id } || []
   
+  if relevant_offers.empty? 
+    relevant_offers = all_offers.select {|o| o.uuid == uuid } || [] 
+  end
+end
+
+%>  
   <offersArea>    
+    <% if listing.any? && !is_owner && !relevant_offers.any? %>
       <div class="col-md-3"></div>
 
       <div id="newOffer" class="col-md-6">
@@ -25,21 +38,33 @@
                     <input name="contact" class="form-control" placeholder="your email/phone"></input>
                 </div>
 
-                <button type='button' class="input-group" jab-click='addOffer'>Submit</button>
+                <button type='button' class="input-group" onclick='offers.addOffer()'>Submit</button>
           </form>
       </div>
       <div class="col-md-3"></div>
-
-      <div id='offersListContainer' class="col-md-12">
-          <h2>Offers</h2>
+      <% end %>
+      
+      <% if relevant_offers.any? %>
+        <h2>Offers</h2>
+        <div id='offersListContainer' class="col-md-12">          
           <offers class='col-md-12'>
-              <!--nothing can go here-->              
-              <div name=offersList class='offer bg-info col-md-4'>
-                  <p>Name: <span name='name'></span> </p>
-                  <p>Price: <span name='price'></span> </p>
-                  <p>Details: <span name='details'></span></p>
-                  <p>Contact: <span name='contact'></span></p>
-              </div>          
+            <% relevant_offers.each do |offer| %>                              
+                <div name=offersList class='offer bg-info col-md-4'>
+                      <p>Name: <span name='name'>  <%= offer.name %> </span> </p>
+                      <p>Price: <span name='price'><%= offer.price %></span> </p>
+                      <p>Details: <span name='details'> <%= offer.details %></span></p>
+                      <p>Contact: <span name='contact'> <%= offer.contact %> </span></p>
+                </div>                        
+            <% end %>
           </offers>
-      </div>
+        </div>
+      <% elsif is_owner && listing.any? %>
+        <div class="col-md-12">
+          <div class="col-md-3"></div>
+          <div class="col-md-5"> 
+            <%= erb :working_on_it, locals: locals %>
+          </div>  
+          <div class="col-md-4"></div>
+        </div>>
+      <% end %>
   </offersArea>
