--- a/public/layout.erb
+++ b/public/layout.erb
@@ -25,7 +25,9 @@
     <script src="/js/lib/jab.js"></script>     
     <script src="/js/lib/jquery2.1.3.min.js"></script>
     <script src="/js/lib/lodash.min.js"></script>
+    <script src="/js/lib/mousetrap.min.js"></script>     
     <script src="/js/lib/es6shim.min.js"></script>
+    <script src="/js/mylib.js"></script>     
     <script src="/js/mylib.js"></script>     
     <!-- end libs -->        
 
