--- a/public/offers.erb
+++ b/public/offers.erb
@@ -1,5 +1,5 @@
 <%
-is_owner = listing.user_id == user_id
+is_owner = !user_id.nil? && (listing.user_id == user_id)
 relevant_offers = all_offers = Offers.by_listing(listing._id) || []
 if !is_owner 
   #get only this user's offers. 
