--- a/public/css/main.less
+++ b/public/css/main.less
@@ -25,6 +25,32 @@ offersArea {
         min-width:200px;
         text-align:left;
     }    
+    h2 {
+        text-align: center;
+    }
+    .offer {
+        padding: 20px;
+        margin-top: 10px;
+        padding-top: 12px;
+    }
+
+    #newOfferMessage {
+        textarea {
+            width: 100%;
+            resize: none;
+            border: none;
+            padding: 5px;
+        }
+    }
+
+    .msg {
+        background-color: aliceblue;
+        padding: 5px;
+
+        &.them {
+            background-color: floralwhite;
+        }
+    }
 }
 
 listing-page {
