--- a/public/navbar.erb
+++ b/public/navbar.erb
@@ -1,8 +1,8 @@
 <!-- <div id="navbar" class="navbar-collapse collapse"> -->
 <div id="navbar" class="navbar-collapse collapse">
-      <!-- <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">ClassyPie</a></li>
+        <!-- <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -15,8 +15,8 @@
             <li><a href="#">Separated link</a></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-        </li>
-      </ul> -->
+        </li> -->
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><a href="../navbar/">Default</a></li> -->
         <li><a href="#" id='currentUserEmail'> <%= user_email %> </a></li>
