--- a/public/offers.erb
+++ b/public/offers.erb
@@ -35,7 +35,7 @@ end
 
                 <div class="input-group">                        
                     <span class="input-group-addon">Contact via</span>
-                    <input name="contact" class="form-control" placeholder="your email/phone"></input>
+                    <input name="contact" value='<%= user_email %>' class="form-control" placeholder="your email/phone"></input>
                 </div>
 
                 <button type='button' class="input-group" onclick='offers.addOffer()'>Submit</button>
