--- a/public/css/main.less
+++ b/public/css/main.less
@@ -18,6 +18,13 @@ post-listing {
     background-color: cornsilk;
     padding: 20px;
     padding-top: 0;
+
+    .structuredOptionsRow {
+        /*background-color: red;*/
+        .col-md-3 {
+            padding-left: 0;
+        }
+    }
 }
 
 offersArea {    
