--- a/public/index.erb
+++ b/public/index.erb
@@ -17,35 +17,35 @@
                     </div>
                 </div>
 
-                <div class="row optionsRow">
-                    <div class="col-md-4">                        
+                <div class="row optionsRow structuredOptionsRow">
+                    <div class="col-md-12">                        
                         <div class="input-group">                        
                                 <span class="input-group-addon">Where?</span>
-                                <input type="text" name="where" class="form-control" value="<%=listing.where %>">
+                                <input id="autocompleteAddress" type="text" name="where" class="form-control" onFocus="geolocate()" value="<%=listing.where %>" placeholder='Your location'>
                         </div>
                     </div>
 
-                    <div class="col-md-4">                        
+                    <!-- <div class="col-md-3">                        
                         <div class="input-group">                        
                                 <span class="input-group-addon">When?</span>
-                                <input type="text" name="when" class="form-control" value="<%=listing.when%>">
+                                <input type="text" name="when" class="form-control datepicker" value="<%=listing.when%>">
                         </div>
                     </div>
 
-                    <div class="col-md-4">                        
+                    <div class="col-md-3">                        
                         <div class="input-group">                        
                                 <span class="input-group-addon">For About</span>
                                 <input type="text" name="for_about" class="form-control" value='<%=listing.for_about%>'>
                                 <span class="input-group-addon">$</span>
                         </div>
-                    </div>                    
+                    </div>                     -->
                 </div>
                   
                 <div class="row optionsRow">  
                     <div class="col-md-12">
                         <div class="input-group">
-                            <span class="input-group-addon">Details</span>
-                            <textarea name=details class="form-control custom-control" rows="4" style="resize:none"><%=listing.details%></textarea> 
+                            <span class="input-group-addon">Details (optional)</span>
+                            <textarea name=details class="form-control custom-control" rows="4" style="resize:none" placeholder='What exactly are you looking for? The more details you give, the more specific your matches will be. Feel free to include any specific requirements or preferences.'><%=listing.details%></textarea> 
                         </div>
                     </div>         
                 </div>       
