--- a/public/layout.erb
+++ b/public/layout.erb
@@ -15,7 +15,7 @@
 <body>
 
     <%= erb :navbar, locals: locals %>
-
+    
     <container class="container">    
         <%= yield %>        
     </container>
@@ -25,13 +25,18 @@
     <script src="/js/lib/jab.js"></script>     
     <script src="/js/lib/jquery2.1.3.min.js"></script>
     <script src="/js/lib/lodash.min.js"></script>
-    <script src="/js/lib/mousetrap.min.js"></script>     
+    <script src="/js/lib/mousetrap.min.js"></script>
+    <!--<script src="/js/lib/bootstrap-datepicker.js"></script>-->
     <script src="/js/lib/es6shim.min.js"></script>
     <script src="/js/mylib.js"></script>     
-    <script src="/js/mylib.js"></script>     
-    <!-- end libs -->        
-
-    <script src="/js/app.js"></script>     
     
+    <!-- end libs -->        
+    <script src="/js/app.js"></script>     
+
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
+    <script src="/js/lib/googleMapsAutocompleteInput.js"></script>
+    
+</script>
+   
 </html>
  
