--- a/public/index.erb
+++ b/public/index.erb
@@ -1,11 +1,14 @@
-
+<% 
+ title_suffix = !listing.any? ? '' : (is_owner ? ' - Your ' : ' - ') + 'Request: '+listing.title
+ title = 'ClassyPie' + title_suffix
+%>
     <div class="col-md-12">
         <div class="col-md-3"></div>
         <post-listing class="col-md-6">            
             <form id="postForm">            
                 <div class="row">
                     <input type="hidden" name="id" value='<%=listing._id%>'>
-                    <div class="col-md-2 col-offset-5"><h1><a href="/">ClassyPie</a></h1></div>                    
+                    <div class="col-md-12"><h1><a href="/"><%= title %></a></h1></div>                    
                 </div>
            
                 <div class="row">
