--- a/public/message.erb
+++ b/public/message.erb
@@ -1,2 +1,2 @@
-<% pronoun = msg.user_id == user_id || msg.uuid == uuid ? 'You' : 'Them' %>
+<% pronoun = msg.user_id == user_id ? 'You' : 'Them' %>
 <p class='msg <%=pronoun.downcase%>'> <%= pronoun %> : <%= msg.text %> </p>
