--- a/public/navbar.erb
+++ b/public/navbar.erb
@@ -1,7 +1,7 @@
 <!-- <div id="navbar" class="navbar-collapse collapse"> -->
 <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">ClassyPie</a></li>
+        <li class="active"><a href="/">ClassyPie</a></li>
         <!-- <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
         <li class="dropdown">
