--- a/public/navbar.erb
+++ b/public/navbar.erb
@@ -19,7 +19,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><a href="../navbar/">Default</a></li> -->
-        <li><a href="#" id='currentUserEmail'> <%= user_email %> </a></li>
+        <li><a href=<%='/user/'+user_id%> id='currentUserEmail'> <%= user_email %> </a></li>
         <li><a href="#" id='loginBtn' onclick='signup()'>Login/Sign Up</a></li>
         <li><a href="#" id='logoutBtn' onclick='logout()'>Logout</a></li>
         <!-- <li><a href="../navbar-static-top/">Static top</a></li> -->
