--- a/public/user.erb
+++ b/public/user.erb
@@ -1,8 +1,18 @@
+<%
+  
+
+%>
+
+
         <user-page class="full-page row">
-            <div class="col-md-4"><p>User page results </p></div>
+            <div class="col-md-4"><p>Name: <%= user.name %></p></div>
             <div class="col-md-4"><p>User page </p></div>
             <div class="col-md-4"><p>User page </p></div>
             <div class="col-md-4"><p>User page 0</p></div>
             <div class="col-md-4"><p>User page 1</p></div>
             <div class="col-md-4"><p>User page 2</p></div>
         </user-page>
+
+      <form id='userData' method='POST' action='/user/updateMe'>
+        <input type='text' name='name'>
+      </form>
