reviews and user pages seem to work

--- a/public/layout.erb
+++ b/public/layout.erb
@@ -32,7 +32,8 @@
     
     <!-- end libs -->        
     <script src="/js/app.js"></script>     
-
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
+    <script src="/js/lib/googleMapsAutocompleteInput.js"></script>
 </script>
    
 </html>
