--- a/public/user_reviews.erb
+++ b/public/user_reviews.erb
@@ -1,10 +1,10 @@
 <%
-  reviews_of_user = Reviews.of_target(user_id)
+  reviews_of_user = Reviews.of_target(target_user._id)
 %>
 
 
       <h1> Add Review </h1>
-      <form id='userData' method='POST' action=<%='/reviews/user/'+user_id%> >
+      <form id='userData' method='POST' action=<%='/reviews/user/'+target_user._id%> >
         
         <input type='number' name='rating'>
         <textarea type='text' name='text'></textarea>        
@@ -14,7 +14,7 @@
       <h1> Reviews </h1>
 
       <% reviews_of_user.each do |rev| %>
-        <div> <%= YAML.dump rev %> </div>
+        <div> <%= rev.to_json %> </div>
       <% end %>
 
 
