enable search by coordinates

--- a/public/index.erb
+++ b/public/index.erb
@@ -24,7 +24,7 @@
                     <div class="col-md-12">                        
                         <div class="input-group">                        
                                 <span class="input-group-addon">Where?</span>
-                                <input id="autocompleteAddress" type="text" name="where" class="form-control" onFocus="geolocate()" value="<%=listing.where %>" placeholder='Your location'>
+                                <input type="text" name="where" class="autocompleteAddress form-control" onFocus="geolocate()" value="<%=listing.where %>" placeholder='Your location'>
                         </div>
                     </div>
 
