--- a/public/navbar.erb
+++ b/public/navbar.erb
@@ -5,6 +5,7 @@
 <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">ClassyPie</a></li>
+
         <!-- <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
         <li class="dropdown">
@@ -22,6 +23,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><a href="../navbar/">Default</a></li> -->
+        <li><a href="/search">search</a></li>
         <% if user_id %>
         <li><a href=<%='/user/'+user_id%> id='currentUserEmail'> <%= user_email %> </a></li>
         <% end %>
