--- a/public/search.erb
+++ b/public/search.erb
@@ -1,8 +1,11 @@
-        <search-listings class="full-page row">
-            <div class="col-md-4"><p>Search listings results </p></div>
-            <div class="col-md-4"><p>Some text </p></div>
-            <div class="col-md-4"><p>Some text </p></div>
-            <div class="col-md-4"><p>Some text 0</p></div>
-            <div class="col-md-4"><p>Some text 1</p></div>
-            <div class="col-md-4"><p>Some text 2</p></div>
-        </search-listings>
+<h1>Search</h1>
+
+  <form id='searchForm' method='get' action='/searchValues/'>
+    <input type='text' name='content' value='<%= content=content || nil %>'>
+    <input type='text' name='location' class='autocompleteAddress' value='<%= location=location || nil%>'>
+    <button>Submit</button>
+  </form>
+
+  <% listings.each do |item| %>
+    <div> <%= item.to_json %> </div>
+  <% end %>
