--- a/public/views/layout.erb
+++ b/public/views/layout.erb
@@ -24,6 +24,10 @@
         <!-- header -->   <link rel="stylesheet" href="/ui-kit/ui-kit-header/css/style.css">
         <!-- price -->    <link rel="stylesheet" href="/ui-kit/ui-kit-price/css/style.css">
         <!-- projects --> <link rel="stylesheet" href="/ui-kit/ui-kit-projects/css/style.css">
+    
+        <link rel="stylesheet/less" type="text/css" href="/css/main.less"/>    
+            <script> less = { logLevel: 2 }</script>
+            <script src="/js/lib/less.min.js"></script>  
     </head>
 
     <body>
@@ -49,6 +53,6 @@
         <!-- end of libs, start logic -->        
         <script src="/js/app.js"></script>     
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
-        <script src="/js/lib/googleMapsAutocompleteInput.js"></script>
+        <script src="/js/lib/googleMapsAutocompleteInput.js"></script>            
     </body>
 </html>
